# faocas_qc

./: build_all.sh  build_all.sh~  clean_all.sh  clean_all.sh~
exaro_2.0.0/: CMakeLists.txt
exaro_2.0.0/apps/: CMakeLists.txt
exaro_2.0.0/apps/designer/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bdrt.desktop  command.cpp  command.h  designerpage.cpp  designerpage.h  designerquerywidget.cpp  designerquerywidget.h  designerquerywidget.ui  designeruitype.cpp  designeruitype.h  designeruitype.ui  designeruiwidget.cpp  designeruiwidget.h  designeruiwidget.ui  eXaro.icns  exaro.desktop  exaro.nsi  exaro.rc  exaroapplication.cpp  exaroapplication.h  exceptiondialog.ui  fieldswizardpage.cpp  fieldswizardpage.h  fieldswizardpage.ui  groupwizardpage.cpp  groupwizardpage.h  groupwizardpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namevalidator.cpp  namevalidator.h  objectmodel.cpp  optionsdialog.cpp  optionsdialog.h  (+20 more)
exaro_2.0.0/apps/designer/plugins/: CMakeLists.txt
exaro_2.0.0/apps/designer/plugins/toolbars/: CMakeLists.txt
exaro_2.0.0/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
exaro_2.0.0/build_debug/apps/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/apps/designer/: Makefile  cmake_install.cmake  exaro_ru_UA.qm  moc_designeruitype.cxx  moc_fieldswizardpage.cxx  moc_mainwindow.cxx  moc_namevalidator.cxx  moc_optionsdialog.cxx  moc_pagewizardpage.cxx  ui_designeruiwidget.h  ui_exceptiondialog.h  ui_fieldswizardpage.h  ui_groupwizardpage.h  ui_optionsdialog.h  ui_querywizardpage.h
exaro_2.0.0/build_debug/apps/designer/plugins/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/libs/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/libs/report/: Makefile  cmake_install.cmake  moc_searchwidget.cxx  moc_sqlquery.cxx
exaro_2.0.0/build_debug/plugins/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/plugins/report/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/plugins/report/bands/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/plugins/report/export/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/plugins/report/items/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/plugins/report/page/: Makefile  cmake_install.cmake
exaro_2.0.0/build_debug/plugins/report/report/: Makefile  cmake_install.cmake  moc_report.cxx
exaro_2.0.0/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
exaro_2.0.0/build_release/apps/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/apps/designer/: Makefile  cmake_install.cmake  moc_aboutdialog.cxx  moc_designerpage.cxx  moc_designeruiwidget.cxx  moc_groupwizardpage.cxx  moc_queryeditdialog.cxx  moc_scripteditdialog.cxx  moc_sqldatabasedialog.cxx  moc_sqlsyntaxhighlighter.cxx  ui_designeruitype.h  ui_mainwindow.h  ui_pagewizardpage.h
exaro_2.0.0/build_release/apps/designer/plugins/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/libs/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/libs/report/: Makefile  cmake_install.cmake  libReport.so.2.0.0  moc_iteminterface.cxx  moc_pageinterface.cxx  moc_previewdialog.cxx  moc_reportengine.cxx  moc_reportinterface.cxx
exaro_2.0.0/build_release/plugins/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/plugins/report/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/plugins/report/bands/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/plugins/report/export/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/plugins/report/items/: Makefile  cmake_install.cmake
exaro_2.0.0/build_release/plugins/report/page/: Makefile  cmake_install.cmake  page.qrc.depends
exaro_2.0.0/build_release/plugins/report/report/: Makefile  cmake_install.cmake
exaro_2.0.0/cmake/modules/: FindExaro.cmake  FindQuazip.cmake
exaro_2.0.0/debian/: changelog  control  copyright  exaro-plugins.install  exaro.install  exaro.menu  libexaro-dev.install  libexaro.install  rules
exaro_2.0.0/examples/music/: music.db  musicReport.bdrt
exaro_2.0.0/libs/report/: CMakeLists.txt  bandinterface.cpp  document.cpp  exportinterface.cpp  fakepaintdevice.cpp  fakepaintengine.cpp  globals.cpp  iteminterface.cpp  page.cpp  pagegraphicsitem.cpp  pageinterface.cpp  paintdevice.cpp  paintengine.cpp  previewdialog.cpp  previewwidget.cpp  reportengine.cpp  reportinterface.cpp  searchwidget.cpp  sqlquery.cpp
exaro_2.0.0/plugins/: CMakeLists.txt
exaro_2.0.0/plugins/report/: CMakeLists.txt
exaro_2.0.0/plugins/report/bands/: CMakeLists.txt
exaro_2.0.0/plugins/report/bands/detail/: CMakeLists.txt  detail.cpp  detail.h
exaro_2.0.0/plugins/report/bands/detailContainer/: CMakeLists.txt  detailContainer.qrc  detailcontainer.cpp  detailcontainer.h
exaro_2.0.0/plugins/report/bands/detailFooter/: CMakeLists.txt  detailfooter.cpp  detailfooter.h
exaro_2.0.0/plugins/report/bands/detailHeader/: CMakeLists.txt  detailheader.cpp  detailheader.h
exaro_2.0.0/plugins/report/bands/overlay/: CMakeLists.txt  overlay.cpp  overlay.h
exaro_2.0.0/plugins/report/bands/pageFooter/: CMakeLists.txt  pagefooter.cpp  pagefooter.h
exaro_2.0.0/plugins/report/bands/pageHeader/: CMakeLists.txt  pageheader.cpp  pageheader.h
exaro_2.0.0/plugins/report/bands/summary/: CMakeLists.txt  summary.cpp  summary.h
exaro_2.0.0/plugins/report/bands/title/: CMakeLists.txt  title.cpp  title.h
exaro_2.0.0/plugins/report/export/: CMakeLists.txt
exaro_2.0.0/plugins/report/export/csvTxt/: CMakeLists.txt  csvtxt.cpp  csvtxt.h  exportSettingsDialog.ui  exportsettingsdialog.cpp  (+1 more)
exaro_2.0.0/plugins/report/items/: CMakeLists.txt
exaro_2.0.0/plugins/report/page/: CMakeLists.txt  page.cpp  page.h
exaro_2.0.0/plugins/report/report/: CMakeLists.txt  report.cpp  report.h
exaro_2.0.0/templates/: h
exaro_2.0.0/translations/: exaro_ar_DZ.ts  exaro_fr_FR.ts  exaro_it_IT.ts  exaro_ro_RO.ts  exaro_ru_UA.ts  install.bat  install.sh  prepare.bat  prepare.sh
exaro_2.0.0/util/: macosx_bundle.sh  pkgApp.pl
(+1097 files in other folders)
