# (c) 2008 by BogDan Vatra < bogdan@licentia.eu >

add_subdirectory(detail)
add_subdirectory(detailFooter)
add_subdirectory(overlay)
add_subdirectory(pageHeader)
add_subdirectory(title)
add_subdirectory(detailContainer)
add_subdirectory(detailHeader)
add_subdirectory(pageFooter)
add_subdirectory(summary)
