# (c) 2008 by BogDan Vatra < bogdan@licentia.eu >

add_subdirectory(arc)
add_subdirectory(charts)
add_subdirectory(field)
add_subdirectory(picture)
add_subdirectory(rectangle)
add_subdirectory(text)
add_subdirectory(chord)
add_subdirectory(ellipse)
add_subdirectory(htmlscript)
add_subdirectory(line)
add_subdirectory(pie)
add_subdirectory(script)
add_subdirectory(formula)

if (EXARO_LICENSE STREQUAL "GPL")
    find_package(Zint)
    if (ZINT_FOUND)
	add_subdirectory(barcode)
    else(ZINT_FOUND)
	    message("** Zint was not found in your system, if you want to use barcode plugin, consider to download and install Zint from it's original sites \"http://www.zint.org.uk/\", \"http://sourceforge.net/projects/zint/\" or a working snapshot from \"http://code.google.com/p/exaro/downloads/list\" ")
    endif(ZINT_FOUND)
else(EXARO_LICENSE STREQUAL "GPL")
    message("Barcode plugin will not be build because Zint (http://www.zint.org.uk/) is GPL.\nIf you want to use barcodeplugin please choose GPL license for this library and for your project.")
endif(EXARO_LICENSE STREQUAL "GPL")
